--- a/my-app/src/coffee-house/App.scss
+++ b/my-app/src/coffee-house/App.scss
@@ -55,7 +55,8 @@
     font-size: 14px;
     width: 589px;
     word-wrap: break-word;
-    text-align: center;
+    text-align: justify;
+    text-align-last: center;
   }
 }
 
