--- a/my-app/src/services/tab-floor/tab-floor.scss
+++ b/my-app/src/services/tab-floor/tab-floor.scss
@@ -6,17 +6,23 @@
     justify-content: center;
     align-items: center;
 
+    button {
+        background: none;
+        border: none;
+        color: inherit;
+        font: inherit;
+        cursor: pointer;
+        padding: 0;
+        text-decoration: none;
+        color: black;
+    }
+
     .floor-options {
         display: flex;
         justify-content: center;
         gap: 20px;
         align-items: center;
         margin-bottom: 15px;
-    }
-
-    a {
-        text-decoration: none;
-        color: black;
     }
 
     .link-img {
