--- a/my-app/src/coffee-house/App.scss
+++ b/my-app/src/coffee-house/App.scss
@@ -14,10 +14,11 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+
   .title {
     font-size: 40px;
   }
-  
+
   .line {
     transform: scale(0.9);
   }
@@ -29,6 +30,7 @@
     word-wrap: break-word;
     text-align: center;
   }
+
   button[type="button"] {
     margin-top: 15px;
     height: 30px;
@@ -47,9 +49,11 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+
   .title {
     font-size: 24px;
   }
+
   .text {
     margin-top: 10px;
     font-size: 14px;
@@ -67,16 +71,20 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+
   .title {
     font-size: 24px;
     margin-bottom: 30px;
   }
+
   .card-group {
     display: flex;
     flex-direction: row;
     gap: 71px;
   }
+
   .card-group__item {
+    cursor: pointer;
     background-color: rgba(255, 255, 255, 0.65);
     width: 220px;
     height: 240px;
@@ -86,10 +94,12 @@
     justify-content: center;
     align-items: center;
     gap: 10px;
+
     img {
       width: 151px;
       height: 130px;
     }
+
     .price {
       align-self: flex-end;
       margin-right: 25px;
