refactor ourCoffee page -> add template for this page and pleasure page, change paths to different photos

--- a/my-app/src/coffee-house/App.scss
+++ b/my-app/src/coffee-house/App.scss
@@ -1,7 +1,7 @@
 .house-header {
   height: 50vh;
   margin-left: -10px;
-  background-image: url('../imgs/main-bg.svg');
+  background-image: url('../imgs/house/main-bg.svg');
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
@@ -65,7 +65,7 @@
 }
 
 .our-best {
-  background-image: url('../imgs/goldnoise-bg.svg');
+  background-image: url('../imgs/house/goldnoise-bg.svg');
   height: 46vh;
   display: flex;
   flex-direction: column;
