--- a/my-app/src/services/page-template/page-template.scss
+++ b/my-app/src/services/page-template/page-template.scss
@@ -21,6 +21,7 @@
 
 .wrapper {
     display: flex;
+    flex: 1;
     flex-direction: column;
     align-items: center;
     gap: 50px;
@@ -40,6 +41,7 @@
         width: 346px;
         height: 355px;
         align-items: center;
+        box-sizing: border-box;
 
         img {
             transform: scale(0.7);
@@ -50,7 +52,6 @@
         }
 
         .text {
-            margin-top: 20px;
             text-align: center;
         }
     }
@@ -73,6 +74,7 @@
         gap: 83px;
         font-size: 14px;
         margin-bottom: 50px;
+
         .search-group {
             display: flex;
             flex-direction: row;
@@ -110,6 +112,11 @@
         gap: 71px;
         display: grid;
         grid-template-columns: repeat(3, 1fr);
+
+        button {
+            background: white;
+            border: none;
+        }
 
         .product-cards-item {
             cursor: pointer;
